# tamipami

./: LICENSE.txt  LN-Non-treated_R1_001.fastq.zst.REMOVED.git-id  LN-Non-treated_R2_001.fastq.zst.REMOVED.git-id  LN-TnpB_Sample_R1_001.fastq.zst.REMOVED.git-id  LN-TnpB_Sample_R2_001.fastq.zst.REMOVED.git-id  README.rst  meta.yaml  pyproject.toml
TAMIPAMI/: __init__.py  main.py
tests/: test_main_pytest.py
tests/test_data/: NT-10seqs_R1.fastq  NT-10seqs_R2.fastq  NT-10seqs_merged_correct.fastq
