[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "tamipami"
version = "0.0.1"
description = "TBD"
authors = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"}]
maintainers = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"}]
license = {file = "LICENSE.txt"}
readme = "README.rst"
keywords = ["Amplicon", "sequencing", "fungal", "ITS"]
requires-python = ">=3.5"

dependencies = [
    "biopython",
    "pandas",
    "scikit-bio",
    "logomaker",
    "statsmodels",
    "scipy",
    "matplotlib"
]


classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Development Status :: 3 - Alpha"
]



[project.urls]
repository = "http://github.com/microlei/tamipami"

[project.optional-dependencies]
tests = [
"pytest"
]


[project.scripts]
tamipami="TAMIPAMI.main:main"